[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/005SceneMenu.png" type="Texture" id=1]
[ext_resource path="res://assets/img/006MMClick.png" type="Texture" id=2]
[ext_resource path="res://assets/img/006MMHover.png" type="Texture" id=3]
[ext_resource path="res://assets/img/006MMNormal.png" type="Texture" id=4]
[ext_resource path="res://src/util/Navigation.gd" type="Script" id=5]

[node name="Navigation" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -48.0
margin_top = -112.0
margin_right = 51.0
margin_bottom = 53.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JamBtn" type="Button" parent="VBoxContainer"]
margin_right = 99.0
margin_bottom = 20.0
text = "Jam"

[node name="DisplayCaseBtn" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 99.0
margin_bottom = 60.0
text = "My Collection"

[node name="StoreBtn" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 99.0
margin_bottom = 100.0
text = "Store"

[node name="MainEntranceBtn" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 99.0
margin_bottom = 140.0
text = "Go Outside"

[node name="MetaMaskConnectBtn" type="TextureButton" parent="."]
margin_left = -31.0
margin_top = 60.0
margin_right = 94.0
margin_bottom = 185.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBoxContainer/JamBtn" to="." method="_on_JamBtn_up"]
[connection signal="button_up" from="VBoxContainer/DisplayCaseBtn" to="." method="_on_DisplayCaseBtn_up"]
[connection signal="button_up" from="VBoxContainer/StoreBtn" to="." method="_on_StoreBtn_up"]
[connection signal="button_up" from="VBoxContainer/MainEntranceBtn" to="." method="_on_MainEntranceBtn_up"]
[connection signal="button_up" from="MetaMaskConnectBtn" to="." method="_on_MetaMaskConnectBtn_up"]
